fleetman-cluster/workloads.yaml
# Active Mq
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activemq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activemq
  template:
    metadata:
      labels:
        app: activemq
    spec:
      containers:
        - name: activemq
          image: richardchesterwood/k8s-fleetman-queue:release2

---

# Api-Gateway
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: richardchesterwood/k8s-fleetman-api-gateway:release2
---

# Position Simulator
apiVersion: apps/v1
kind: Deployment
metadata:
  name: position-simulator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: position-simulator
  template:
    metadata:
      labels:
        app: position-simulator
    spec:
      containers:
        - name: position-simulation
          image: richardchesterwood/k8s-fleetman-position-simulator:release2
---

# Position Tracker
apiVersion: apps/v1
kind: Deployment
metadata:
  name: position-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: position-tracker
  template:
    metadata:
      labels:
        app: position-tracker
    spec:
      containers:
        - name: position-tracker
          image: richardchesterwood/k8s-fleetman-position-tracker:release3
---

# Webapp
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  selector:
    matchLabels:
      app: webapp-angular
  template:
    metadata:
      labels:
        app: webapp-angular
    spec:
      containers:
        - name: webapp
          image: richardchesterwood/k8s-fleetman-webapp-angular:release2
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: history-database
spec:
  selector:
    matchLabels:
      app: history-database
  template:
    metadata:
      labels:
        app: history-database
    spec:
      containers:
        - name: mongo
          image: mongo:3.6.5-jessie
          volumeMounts:
            - mountPath: /data/db
              name: mongo-persistence-storage
      volumes:
        - name: mongo-persistence-storage
          hostPath:
            path: /home/rajan/Development/Mongo/Persistence
            type: DirectoryOrCreate
